syntax="proto3";

package proto;

service CatalogServer {
	rpc CreateSpace(CreateSpaceReq) returns (CreateSpaceRes) {}
	rpc EnlistPartitionServer(EnlistPartitionServerReq) returns(EnlistPartitionServerRes) {}
}


